src/test/deca/syntax/invalid/created/testOpArith/DecremJava.deca
// Description :
//    Test invalide : Opération de décrémentation sur une constante
//
// Résultats :
//    Erreur syntaxique
//    Ligne 10:  mismatched input ';' expecting {'(', 'new', 'this', 'readFloat', 'readInt', 'null', 'true', 'false', '-', '!', IDENT, INT, FLOAT, STRING}

{
    int x = 0;
    x--;
}

